@@ -1,6 +1,7 @@
 Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
 
 {{$NEXT}}
+ - Remove files from the repo which are no longer produced in the build
 
 0.40      2016-06-11
   - switch installer default from [DualBuilders] to [MakeMaker] (GH#8, ether)
